--- a/Settings/CSS/Lcss.css
+++ b/Settings/CSS/Lcss.css
@@ -1,10 +1,5 @@
 @charset "UTF-8";
 
-.relative.height {
-	min-height:100%;
-	position:relative;
-	padding-bottom:80px;
-}
 .f.k.r {
 	font-family:'Noto Serif KR', serif;
 }
@@ -34,12 +29,6 @@ a.link:hover {
 	right:30px;
 	padding:15px;
 }
-footer.ui.inverted.vertical.footer.segment{
-	position:absolute;
-	bottom:0;
-	width:100%;
-	height:80px
-}
 hr {
 	margin-top:15px;
 	margin-bottom:15px;
@@ -68,3 +57,18 @@ div.ui.search.action.labeled.input {
 .ui.action.input input[type="file"] {
 	display:none;
 }
+/*
+	footer
+
+.relative.height {
+	min-height:100%;
+	position:relative;
+	padding-bottom:80px;
+}
+footer.ui.inverted.vertical.footer.segment{
+	position:absolute;
+	bottom:0;
+	width:100%;
+	height:80px
+}
+*/
